--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@langchain/core": "^0.3.27",
+    "@langchain/ollama": "^0.1.4",
     "mineflayer": "^4.23.0",
     "mineflayer-pathfinder": "^2.4.5"
   }
